versioned_docs/version-3.1.0/mta/Teststep/index.md
# Teststep



## Definition

A Teststep tests some specific aspect of system behaviour. A Teststep is always part of a [Test Case](test-case).

The Teststep is the lowest or fourth level of the 4-layer framework that is used in MTA. It describes the actual operating functions. 

A Teststep must be one of the following types:
- [Microflow call](Teststep/microflow)
- Object Action

An Object Teststep can execute the following actions:
- [Create](Teststep/create): create an object (without committing it to the database).
- [Retrieve](Teststep/retrieve): retrieve object(s) from memory or database.
- [Change](Teststep/change): change an object (without committing it to the database).
- [Delete](Teststep/delete): mark an object to be deleted. When deleting, always make sure to have the Delete teststeps in the right order, to make sure domain model Delete Constraints don't prevent deletion of the object(s).
- [Persist](Teststep/persist): finalizes above Object teststeps. 

Note that if a retrieved object is deleted by a Delete Object Teststep in MTA, and afterwards changed in another Teststep, MTA will not give a warning during test design, but give a runtime error on test execution because the object to be changed is no longer available.



## Properties

### Name 
The name of the Teststep. [Edit](#edit-a-teststep) the teststep to change.  

### Description  
A description of the Teststep. [Edit](#edit-a-teststep) the teststep to change. 

### Execution condition

| Setting | Result                                                                                                                                                                                                                                                                                                                                                                          |
| ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| None    | The Teststep will be part of the [Test Run](test-run) if the parent [Test Case](test-case), [Test Suite](test-suite) or [Test Configuration](test-configuration), is executed, and does not stop due to an [Exception](teststep-exception). The Teststep will NOT be part of the Test Run if the parent Test Suite or Test Case has the `Execution condition` = `Skip` setting. |
| Skip    | The Teststep will NOT be part of the Test Run if the parent Test Case, Test Suite or Test Configuration, is executed.                                                                                                                                                                                                                                                           |
| Always  | The Teststep will be part of the Test Run if the parent Test Case, Test Suite or Test Configuration, is executed, even if a previous Teststep encounters an Exception. The Teststep will NOT be part of the Test Run if the parent Test Case or Test Suite has the `Execution condition` = `Skip` setting.                                                                      |

### Exception handling
Determines if the [Test Run](test-run) will either `Continue`, or `Stop`, if a [Teststep Exception](teststep-exception) occurs in this Teststep, that is not handled by a Mendix [Error Handler](https://docs.mendix.com/refguide/error-handling-in-microflows/).

### Delay after execution
Delays the execution of this teststep with specified milliseconds. [Edit](#edit-a-teststep) the teststep to change. 

### Highlight
Highlights the Teststep yellow in the list, to draw attention to it. [Edit](#edit-a-teststep) the teststep to change. 

### Category 
Can be either 'Object' or 'Microflow'.  

### Action   
Only for Object Teststeps; either 'Create', 'Retrieve', 'Change', 'Delete' or 'Persist'.

### Retrieve set 
Only for Retrieve Object Teststeps; either 'All objects', or 'Only First object'.   

### Retrieve option  
Only for Retrieve Object Teststeps; either 'From database', 'From former Teststep', or 'By association' (from memory).

### Microflow Name   
Only for Microflow Teststeps; Name of the microflow to be executed. 


## Business rules
- The name is mandatory.
- A Microflow Teststep must have a microflow selected in order to be able to execute the [Test Configuration](test-configuration).
- An 'Create', 'Change' or 'Retrieve' Object Teststep must have an entity selected in order to be able to execute the Test Configuration.
- It is not allowed to select the `Execution condition` = `Skip` setting on a Teststep that provides data to another Teststep.

## Actions

### View Teststeps in a Test Case
- Navigate to the [Test Suite](test-suite) that the Teststeps are in.
- Expand the [Test Case](test-case) to view the Teststeps.
- Properties are shown on the right.

### View Teststep Dependencies
- Select the Teststep to view Dependencies.
- If there are Teststep(s) above, that this Teststep depends on, there is a `Receiving` indicator. Clicking on it will allow to navigate to those Teststep(s).
- If there are Teststep(s) below, that depend on this Teststep, there is a `Providing` indicator. Clicking on it will allow to navigate to those Teststep(s).

### Create a Teststep
- Please consult the documentation for the respective Teststep type: [Microflow call](Teststep/microflow), [Create](Teststep/create), [Retrieve](Teststep/retrieve), [Change](Teststep/change), [Delete](Teststep/delete) or [Persist](Teststep/persist).

### Move a Teststep

#### Move a teststep 1 position up or down.
- Click on the <i class="fas fa-ellipsis"></i> button on the Teststep.
- Click on <i class="fas fa-arrow-up"></i> or "<i class="fas fa-arrow-down"></i>" to move the Teststep up or down.
- Review and [Construction Errors](construction-error).

#### Move Teststeps inside a Test Case.
- Click on the <i class="fas fa-ellipsis"></i> button on the Teststep or Test Case.
- Click on `Arrange Teststeps`.
- Review any [Construction Errors](construction-error).

#### Move a Teststep to another Test Case.
- Click on the <i class="fas fa-ellipsis"></i> button on the Teststep.
- Click on `Move to Test Case`.
- Review any [Construction Errors](construction-error).


### Edit a Teststep
- Select the Teststep.
- Make the changes in the Teststep details, shown on the right. When setting Attribute Values, always keep in mind that the meaning of the value is different for a Retrieve action.
- For Create / Change Object actions and Microflow parameters, the Attribute will be *assigned* the entered value, and 'empty' if checked, but left blank.
- For a Retrieve Object action, the resulting set of objects will be *filtered* by the entered value, and 'empty' if checked, but left blank.

Note that it not is possible to change the action or type of Teststep after creation, or change the entity or microflow that it is associated with.

### Delete a Teststep
- Navigate to the Test Case that the Teststep is in.
- Click on the <i class="fas fa-ellipsis"></i> button on the Teststep.
- Click on `Delete`.

Note that it is possible that due to deleting a Teststep and dependencies with another Teststep, a [Construction Error](construction-error) will occur prohibiting the execution of the Test Configuration.

## Related topics
- [Assert](Assert/)
- [Data Variation](datavariation)
- [Test Case](test-case)


## Feedback?
Missing anything? [Let us know!](mailto:support@menditect.com)

Last updated 26 May 2026